# photographic-dctls

./: CMakeLists.txt  PD-Aces.h  PD-AcesAP0.h  PD-Cineon-Exposure.dctl  PD-Cineon-Invert.dctl  PD-Cineon-Transform.dctl  PD-Cineon.h  PD-Common.h  PD-DCIP3.h  PD-DWG.h  PD-Gen5.h  PD-Grade.dctl  PD-LogC-Exposure.dctl  PD-LogC-Print.dctl  PD-LogC-Temperature.dctl  PD-LogC.h  PD-LogC3-FilmMatrix.dctl  PD-Math-Matrix.dctl  PD-Rec709.h  PD-Saturation.dctl  PD-Stripify.dctl  PD-Test.h  PD-Tonecurve.dctl  PD-Tonemap.h  PD-Tonemapper.dctl  PD-Transform.dctl  PD-Whitepoint.h  PD-sRGB.h  README.md  build.sh  run.py
